--- a/src/ucsb_grad.Rmd
+++ b/src/ucsb_grad.Rmd
@@ -17,3 +17,13 @@ library(here)
 ucsb_grad <- read_csv(here("data","ucsb_grad_data.csv"))
 ```
 
+
+```{r}
+# Create a column graph to visualize change in domestic enrollment by race/ethnicity, for 2008-2019
+ggplot(data = ucsb_grad, aes(x = year_abbr, y = domestic_enrollment, fill = ethnicity)) + 
+  geom_col()
+
+
+
+```
+
