--- a/src/ucsb_grad.Rmd
+++ b/src/ucsb_grad.Rmd
@@ -23,7 +23,8 @@ ucsb_grad <- read_csv(here("data","ucsb_grad_data.csv"))
 ggplot(data = ucsb_grad, aes(x = year_abbr, y = domestic_enrollment, fill = ethnicity)) + 
   geom_col(position = "fill") +
   labs(x = "Academic year (start)",
-       y = "Proportion UCSB Graduate Enrollment\n(Domestic)")
+       y = "Proportion UCSB Graduate Enrollment\n(Domestic)", title = "Domestic Graduate Enrollment and Ethnicity at UCSB") +
+  theme_minimal()
 
 
 
